메소드 참조로 바꿈