@@ -1,17 +1,15 @@
 package com.myproject.doseoro.application.book.readmodel;
 
 import com.myproject.doseoro.adaptor.global.util.session.AccessUserSessionManager;
-import com.myproject.doseoro.application.abstraction.CommandQuery;
 import com.myproject.doseoro.application.abstraction.BookRepository;
+import com.myproject.doseoro.application.abstraction.CommandQuery;
 import com.myproject.doseoro.application.book.dto.GetLikedBooksByUserDtoResult;
 import com.myproject.doseoro.application.book.vo.AllLikedBookVO;
 import com.myproject.doseoro.application.book.vo.BookVO;
-import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Service;
-
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Service;
 
 @Service
 @RequiredArgsConstructor
@@ -24,12 +22,13 @@ public class GetLikedBooksByUserQuery implements CommandQuery<Void, GetLikedBook
     public GetLikedBooksByUserDtoResult query(Void unused) {
         String userId = accessUserSessionManager.extractUser();
 
-        if(userId == null) { return null; }
+        if (userId == null) {
+            return null;
+        }
 
         List<AllLikedBookVO> foundAllBooks = bookMybatisRepository.allLikedBook(userId);
         List<String> listOfBookId = foundAllBooks.stream()
-                .map(book ->book.getBookId())
-                .collect(Collectors.toList());
+            .map(AllLikedBookVO::getBookId).toList();
 
         List<BookVO> books = new ArrayList<>();
         for (int i = 0; i < listOfBookId.size(); i++) {
